# Update copyright trademark

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
   <footer class="dark-background">
   <div class="wrapper">
     <img class="text-centered" src="images/about/mode.jpg" alt="Coding mode on">
-    <p class="text-centered">@Dung Nguyen</p>
+    <p class="text-centered">© Dung Nguyen</p>
   </div>
 	</footer>
 </body>
