# Update copyright trademark

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <footer class="dark-background">
   <div class="wrapper">
     <img class="text-centered" src="images/contact/coffee.jpg" alt="Sitting in coffee shop">
-    <p class="text-centered">@Dung Nguyen</p>
+    <p class="text-centered">© Dung Nguyen</p>
   </div>
 	</footer>
 
