#Update copyright trademark

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <img src="images/home/laptop.jpg" alt="Macbook"/>
   <footer class="dark-background">
     <div class="wrapper">
-      <p class="text-centered">@Dung Nguyen</p>
+      <p class="text-centered">© Dung Nguyen</p>
     </div>
 	</footer>
   <script src="script.js"></script>
