--- a/about.html
+++ b/about.html
@@ -8,41 +8,40 @@
 </head>
 
 <body>
-	<header>
+	<header class >
 		<h1><a href="index.html">Dung Nguyen</a></h1>
 		<nav>
       <a href="index.html"><u>Home</u></a>
 			<a href="about.html"><u>About</u></a>
 			<a href="contact.html"><u>Contact</u></a>
 		</nav>
+    <h2>About me</h2>
 	</header>
 
 	<main>
     <div class="wrapper">
       <p class="text-centered">
-        I am a software developer based in Dallas, TX
-      </p>
-      <p class="text-centered">
-        Beside coding, my interests include:
+        I am a software developer based in Dallas, TX. Beside coding, my interests include:
         <ul class="text-centered">
           <li>Gaming</li>
           <li>Photography</li>
           <li>Traveling</li>
         </ul>
         <p>Please take a look at my website and feel free to <a href="contact.html">contact me</a>.</p>
+        <br>
+        <br>
+        <br>
+        <br>
       </p>
     </div>
   </main>
-
+  
+  <img class="text-centered" src="images/about/mode.jpg" alt="Coding mode on">
+  
   <footer class="dark-background">
   <div class="wrapper">
-    <img class="text-centered" src="images/about/mode.jpg" alt="Coding mode on">
     <p class="text-centered">© Dung Nguyen</p>
   </div>
 	</footer>
 </body>
 </html>
-
-
-
-
