fixed sites typo

--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
     <div class="wrapper">
     <p>I'd love to hear from you. Please feel free to contact or follow me:
       <ol>
-        <li><a href="https://github.com/dnguyen49">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/dungqnguyen/">Linkedin</a></li>
+        <li><a href="https://github.com/dnguyen49">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/dungqnguyen/">LinkedIn</a></li>
       </ol>
       <br>
       <br>
