--- a/about.html
+++ b/about.html
@@ -21,7 +21,11 @@
 	<main>
     <div class="wrapper">
       <p class="text-centered">
-        I am a software developer based in Dallas, TX. Beside coding, my interests include:
+	I am a software developer based in Dallas, TX. My experience has primarily in back-end development, so I'm learning to be a full-stack engineer.
+	I enjoy working in teams, as it makes the process more fun and I can also learn from others. As the saying goes, "If you want to go fast, go alone.
+	If you want to go far, go together."<br>
+        <br>
+	Beside coding, my interests include:
         <ul class="text-centered">
           <li>Gaming</li>
           <li>Photography</li>
