--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width">
 	<title>Dung Nguyen</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 	<link rel="stylesheet" href="style.css" />
@@ -11,11 +13,11 @@
 	<header class >
 		<h1><a href="index.html">Dung Nguyen</a></h1>
 		<nav>
-      <a href="index.html"><u>Home</u></a>
+      		<a href="index.html"><u>Home</u></a>
 			<a href="about.html"><u>About</u></a>
 			<a href="contact.html"><u>Contact</u></a>
 		</nav>
-    <h2>About me</h2>
+    		<h2>About me</h2>
 	</header>
 
 	<main>
@@ -40,7 +42,7 @@
     </div>
   </main>
   
-  <img class="text-centered" src="images/about/mode.jpg" alt="Coding mode on">
+  <img src="images/about/mode.jpg" alt="Coding mode on" class="center">
   
   <footer class="dark-background">
   <div class="wrapper">
