--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 
 <body>
   <header>
+  <!-- Adding Name, job, location -->
     <h1><a href="index.html">Dung Nguyen</a></h1>
     <h2>Software Engineer</h2>
+    <h3>Dallas, Texas</h3>
+  <!-- Navigation tabs -->
     <nav>
 			<a href="index.html"><u>Home</u></a>
 			<a href="about.html"><u>About</u></a>
 			<a href="contact.html"><u>Contact</u></a>
 		</nav> 
   </header>
-  
-  <img src="images/home/laptop.jpg" alt="Macbook"/>
+  <!--   Adding image of a laptop -->
+  <img src="images/home/laptop.jpg" alt="Macbook" class="center"/>
+  <!--   Adding footer -->
   <footer class="dark-background">
     <div class="wrapper">
       <p class="text-centered">© Dung Nguyen</p>
