--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
 		</nav>
 	</header>
 
+  <!-- Adding contact information -->
 	<main>
     <div class="wrapper">
     <p>I'd love to hear from you. Please feel free to contact or follow me:
@@ -32,7 +33,8 @@
     </div>
 	</main>
 
-  <img class="text-centered" src="images/contact/coffee.jpg" alt="Sitting in coffee shop">
+  <!--   Adding image of a person sitting in coffee shop   -->
+  <img src="images/contact/coffee.jpg" alt="Sitting in coffee shop" class="center">
 
   <footer class="dark-background">
   <div class="wrapper">
