--- a/about.html
+++ b/about.html
@@ -2,8 +2,6 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-  	<meta name="viewport" content="width=device-width">
 	<title>Dung Nguyen</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 	<link rel="stylesheet" href="style.css" />
@@ -11,19 +9,21 @@
 
 <body>
 	<header class >
+    <!--  Adding Name, navigation tabs, About me header    -->
 		<h1><a href="index.html">Dung Nguyen</a></h1>
 		<nav>
-      		<a href="index.html"><u>Home</u></a>
+      <a href="index.html"><u>Home</u></a>
 			<a href="about.html"><u>About</u></a>
 			<a href="contact.html"><u>Contact</u></a>
 		</nav>
-    		<h2>About me</h2>
+    <h2>About me</h2>
 	</header>
 
+  <!-- Adding a short description and hobbies -->
 	<main>
     <div class="wrapper">
       <p class="text-centered">
-	I am a software developer based in Dallas, TX. My experience has primarily in back-end development, so I'm learning to be a full-stack engineer.
+        I am a software developer based in Dallas, TX. My experience has primarily in back-end development, so I'm learning to be a full-stack engineer.
 	I enjoy working in teams, as it makes the process more fun and I can also learn from others. As the saying goes, "If you want to go fast, go alone.
 	If you want to go far, go together."<br>
         <br>
@@ -41,7 +41,8 @@
       </p>
     </div>
   </main>
-  
+
+  <!-- Adding image of a desk   -->
   <img src="images/about/mode.jpg" alt="Coding mode on" class="center">
   
   <footer class="dark-background">
