--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width">
 	<title>Dung Nguyen</title>
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
 	<link rel="stylesheet" href="style.css" />
