--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 	<main>
     <div class="wrapper">
       <p class="text-centered">
-        I am a software developer based in Dallas, TX. My experience has primarily in back-end development, so I'm learning to be a full-stack engineer.
+        I am a software developer based in Dallas, TX. My experience has been primarily in back-end development, so I'm learning to be a full-stack engineer.
 	I enjoy working in teams, as it makes the process more fun and I can also learn from others. As the saying goes, "If you want to go fast, go alone.
 	If you want to go far, go together."<br>
         <br>
